--- a/app.json
+++ b/app.json
@@ -16,7 +16,11 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "permissions": [
+        "RECORD_AUDIO"
+      ],
+      "package": "com.abhi.jarvis"
     },
     "web": {
       "bundler": "metro",
@@ -33,10 +37,23 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      "expo-build-properties",
+      {
+      "android": {
+        "compileSdkVersion": 33,
+        "targetSdkVersion": 33
+      }
+    }
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "9f46fa04-00a8-4b9b-8ffd-905e6fe6a18f"
+      }
     }
   }
 }
