--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-community/voice": "^1.1.9",
     "@react-navigation/bottom-tabs": "^7.3.10",
-    "@react-navigation/elements": "^2.3.8",
-    "@react-navigation/native": "^7.1.14",
-    "@react-navigation/native-stack": "^7.3.19",
+    "@react-navigation/elements": "^2.5.0",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
     "expo": "~53.0.12",
     "expo-blur": "~14.1.5",
+    "expo-build-properties": "~0.14.6",
     "expo-constants": "~17.1.6",
+    "expo-dev-client": "~5.2.1",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.0",
@@ -40,9 +42,17 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
-    "expo-dev-client": "~5.2.1",
-    "expo-build-properties": "~0.14.6"
+    "react-native-webview": "13.13.5"
+  },
+  "expo": {
+  "doctor": {
+    "reactNativeDirectoryCheck": {
+      "exclude": [
+        "react-native-responsive-screen",
+        "@react-native-community/voice"
+        ]
+      }
+    }
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
